[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/UI/popup_screen.png" type="Texture" id=1]
[ext_resource path="res://ui/buy_ui/tower_buy_panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/upgrade_ui/TowerUpgradePopup.gd" type="Script" id=3]
[ext_resource path="res://ui/buy_ui/tower_buy_button.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 284, 205 )

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform bool grayscale = false;

void fragment() {
	COLOR.rgba = texture(TEXTURE,UV);
    if (grayscale) {
        COLOR.rgb = vec3(dot(COLOR.rgb, vec3(0.299, 0.587, 0.114)));
    }
}"

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/grayscale = false

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/grayscale = false

[node name="TowerUpgradePopup" type="PopupPanel"]
anchor_right = 0.2
anchor_bottom = 0.267
margin_bottom = -0.200012
custom_styles/panel = SubResource( 1 )
popup_exclusive = true
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Button" type="Button" parent="Control"]
margin_left = 10.0
margin_top = 130.0
margin_right = 57.0
margin_bottom = 150.0
text = "Close"

[node name="TextureRect" parent="Control" instance=ExtResource( 2 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -20.0
margin_right = 50.0
margin_bottom = 20.0

[node name="TowerBuyButton" parent="Control/TextureRect" instance=ExtResource( 4 )]
material = SubResource( 4 )

[node name="Upgrades" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Upgrade1" parent="Control/Upgrades" instance=ExtResource( 2 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_top = -70.0
margin_right = 140.0
margin_bottom = -30.0

[node name="TowerBuyButton" parent="Control/Upgrades/Upgrade1" instance=ExtResource( 4 )]
material = SubResource( 3 )

[node name="Upgrade2" parent="Control/Upgrades" instance=ExtResource( 2 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_top = -20.0
margin_right = 140.0
margin_bottom = 20.0

[node name="TowerBuyButton" parent="Control/Upgrades/Upgrade2" instance=ExtResource( 4 )]
material = SubResource( 3 )

[node name="Upgrade3" parent="Control/Upgrades" instance=ExtResource( 2 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_top = 30.0
margin_right = 140.0
margin_bottom = 70.0

[node name="TowerBuyButton" parent="Control/Upgrades/Upgrade3" instance=ExtResource( 4 )]
material = SubResource( 3 )
margin_right = 43.8
margin_bottom = 38.72

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
